First Draft - Not Responsive

--- a/index.html
+++ b/index.html
@@ -1,15 +1,140 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Project 1 - Introducing Falcon 9</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
-    <!-- write some HTML! -->
+    <nav class="nav">
+      <a href="#"><img src="imgs/logo.svg" alt="Logo" /></a>
+      <ul class="menu-items">
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Advantages</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Products</a></li>
+      </ul>
+    </nav>
+
+    <header class="hero-container">
+      <div class="hero-content">
+        <div class="hero-heading">
+          <h1>Introducing Falcon 9</h1>
+        </div>
+        <div class="hero-sub-heading">
+          <h2>We make dreams come true</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+        </div>
+      </div>
+    </header>
+
+    <section class="features-container">
+      <div class="features">
+        <img src="imgs/icon1.svg" alt="Checkmark Icon" />
+        <h3>Amazing feature 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dolor sit amet.</p>
+        <button>Get it</button>
+      </div>
+      <div class="features">
+        <img src="imgs/icon2.svg" alt="Refresh Icon" />
+        <h3>Amazing feature 2</h3>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <button>Sell it</button>
+      </div>
+      <div class="features">
+        <img src="imgs/icon3.svg" alt="Fingerprint Icon" />
+        <h3>Amazing feature 3</h3>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button>Do it</button>
+      </div>
+    </section>
+
+    <section class="dark-section">
+      <h2>Some cool text</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+    </section>
+
+    <div class="cool-hover">
+      <h4>This looks cool</h4>
+      <p>Hover me if you like random animations</p>
+    </div>
+
+    <section class="gradient-section">
+      <h2>Slick gradient</h2>
+      <p>Lorem ipsum?</p>
+    </section>
+
+    <section class="gallery-container">
+      <div class="gallery-item">
+        <span class="gallery-item-text">Our flagship car: The Model S</span>
+        <img src="imgs/tesla.jpg" alt="Tesla" />
+      </div>
+      <div class="gallery-item">
+        <span class="gallery-item-text">Cool cat</span>
+        <img src="imgs/procat.jpg" alt="Cool Cat" />
+      </div>
+      <div class="gallery-item">
+        <span class="gallery-item-text">Introducing: The Hyperloop</span>
+        <img src="imgs/hyperloop.jpg" alt="Hyperloop" />
+      </div>
+      <div class="gallery-item">
+        <span class="gallery-item-text">So sneaky</span>
+        <img src="imgs/sneakycat.jpg" alt="Sneaky Cat" />
+      </div>
+      <div class="gallery-item">
+        <span class="gallery-item-text">BFR - Big Falcon Rocket</span>
+        <img src="imgs/bfr.jpeg" alt="Rocket Ship" />
+      </div>
+      <div class="gallery-item">
+        <span class="gallery-item-text">So much fun</span>
+        <img src="imgs/funnycat.jpg" alt="Funny Cat" />
+      </div>
+    </section>
+
+    <section class="mailing-list-container">
+      <form class="mailing-list-form">
+        <label>Register to our mailing list:</label>
+        <div class="email-submit-container">
+          <input class="email-input" type="email" />
+          <button>
+            <img src="imgs/send.svg" alt="Submit" />
+          </button>
+        </div>
+        <label>
+          <input type="checkbox" />
+          Send me daily cat images
+        </label>
+      </form>
+    </section>
+
+    <footer class="footer">
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Legal notes</a></li>
+        <li><a href="#">Copyright</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Legal notes</a></li>
+        <li><a href="#">Copyright</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Legal notes</a></li>
+        <li><a href="#">Copyright</a></li>
+      </ul>
+      <ul>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Legal notes</a></li>
+        <li><a href="#">Copyright</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
